automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -154,22 +154,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12"
+       "range(0, 12)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "range(0,len(cities)"
+    "range(0,len(cities))"
    ]
   },
   {
