--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,9 @@
    "source": [
     "\n",
     "    names_and_ranks = [] \n",
-    "# write a for loop that adds the properly formatted string to the names_and_ranks list"
+    "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
+    "for name in city_names:\n",
+    "    name_and_ran"
    ]
   },
   {
