--- a/index.ipynb
+++ b/index.ipynb
@@ -229,9 +229,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-7-c6afea13c025>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-c6afea13c025>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    names_and_ranks = []\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "    names_and_ranks = [] \n",
