--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,8 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for name in city_names:\n",
-    "    names_and_ranks.append(name)"
+    "    names_and_ranks.append(name)\n",
+    "    "
    ]
   },
   {
