--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for name in city_names:\n",
     "    names_and_ranks.append(name)\n",
-    "    "
+    "name_and_ranks    "
    ]
   },
   {
