--- a/index.ipynb
+++ b/index.ipynb
@@ -229,16 +229,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Buenos Aires',\n",
+       " 'Toronto',\n",
+       " 'Pyeongchang',\n",
+       " 'Marakesh',\n",
+       " 'Albuquerque',\n",
+       " 'Los Cabos',\n",
+       " 'Greenville',\n",
+       " 'Archipelago Sea',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Salina Island',\n",
+       " 'Solta',\n",
+       " 'Iguazu Falls']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for name in city_names:\n",
     "    names_and_ranks.append(name)\n",
-    "name_and_ranks    "
+    "names_and_ranks    "
    ]
   },
   {
