--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,7 @@
     "\n",
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
-    "for rank in list(range(0,len(cities))):\n",
+    "for rank in range(0,len(cities)):\n",
     "    names_and_ranks.append(name)\n",
     "names_and_ranks    "
    ]
