automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -234,6 +234,9 @@
    "outputs": [],
    "source": [
     "test = []\n",
+    "name = 'World'\n",
+    "program = 'Python'\n",
+    "print(f'Hello {name}! This is {program}')\n",
     "test.append(printf)"
    ]
   },
