automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,8 +236,8 @@
     "test = []\n",
     "name = 'World'\n",
     "program = 'Python'\n",
-    "print(f'Hello {name}! This is {program}')\n",
-    "test.append(printf)"
+    "\n",
+    "test.append(print(f'Hello {name}! This is {program}'))"
    ]
   },
   {
