--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -238,6 +238,16 @@
      "text": [
       "Hello World! This is Python\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -245,7 +255,8 @@
     "name = 'World'\n",
     "program = 'Python'\n",
     "\n",
-    "test.append(print(f'Hello {name}! This is {program}'))"
+    "test.append(print(f'Hello {name}! This is {program}'))\n",
+    "test"
    ]
   },
   {
