automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -229,23 +229,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World! This is Python\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[None]"
+       "['Hello World! This is Python']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +248,7 @@
     "name = 'World'\n",
     "program = 'Python'\n",
     "\n",
-    "test.append(print(f'Hello {name}! This is {program}'))\n",
+    "test.append((f'Hello {name}! This is {program}'))\n",
     "test"
    ]
   },
