automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,29 +254,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Buenos Aires',\n",
-       " 'Toronto',\n",
-       " 'Pyeongchang',\n",
-       " 'Marakesh',\n",
-       " 'Albuquerque',\n",
-       " 'Los Cabos',\n",
-       " 'Greenville',\n",
-       " 'Archipelago Sea',\n",
-       " 'Walla Walla Valley',\n",
-       " 'Salina Island',\n",
-       " 'Solta',\n",
-       " 'Iguazu Falls']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-17-ec238b5f688d>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-ec238b5f688d>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    names_and_ranks.append((f {rank}'. '{cities[rank]})\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
