--- a/index.ipynb
+++ b/index.ipynb
@@ -271,7 +271,7 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for rank in range(0,len(cities)):\n",
-    "    names_and_ranks.append((f {rank}'. '{cities[rank]})\n",
+    "    names_and_ranks.append((f{rank}. '{cities[rank]})\n",
     "names_and_ranks    "
    ]
   },
