--- a/index.ipynb
+++ b/index.ipynb
@@ -254,27 +254,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[\"0. {'City': 'Buenos Aires', 'Country': 'Argentina', 'Population': 2891000, 'Area': 4758}\",\n",
-       " \"1. {'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731}\",\n",
-       " \"2. {'City': 'Pyeongchang', 'Country': 'South Korea', 'Population': 2581000, 'Area': 3194}\",\n",
-       " \"3. {'City': 'Marakesh', 'Country': 'Morocco', 'Population': 928850, 'Area': 200}\",\n",
-       " \"4. {'City': 'Albuquerque', 'Country': 'New Mexico', 'Population': 559277, 'Area': 491}\",\n",
-       " \"5. {'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 287651, 'Area': 3750}\",\n",
-       " \"6. {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68}\",\n",
-       " \"7. {'City': 'Archipelago Sea', 'Country': 'Finland', 'Population': 60000, 'Area': 8300}\",\n",
-       " \"8. {'City': 'Walla Walla Valley', 'Country': 'USA', 'Population': 32237, 'Area': 33}\",\n",
-       " \"9. {'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27}\",\n",
-       " \"10. {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}\",\n",
-       " \"11. {'City': 'Iguazu Falls', 'Country': 'Argentina', 'Population': 0, 'Area': 672}\"]"
+       "['0. Buenos Aires',\n",
+       " '1. Toronto',\n",
+       " '2. Pyeongchang',\n",
+       " '3. Marakesh',\n",
+       " '4. Albuquerque',\n",
+       " '5. Los Cabos',\n",
+       " '6. Greenville',\n",
+       " '7. Archipelago Sea',\n",
+       " '8. Walla Walla Valley',\n",
+       " '9. Salina Island',\n",
+       " '10. Solta',\n",
+       " '11. Iguazu Falls']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for rank in range(0,len(cities)):\n",
-    "    names_and_ranks.append((f'{rank}. {citie_names[rank]}'))\n",
+    "    names_and_ranks.append((f'{rank}. {city_names[rank]}'))\n",
     "names_and_ranks    "
    ]
   },
