--- a/index.ipynb
+++ b/index.ipynb
@@ -254,27 +254,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['0. Buenos Aires',\n",
-       " '1. Toronto',\n",
-       " '2. Pyeongchang',\n",
-       " '3. Marakesh',\n",
-       " '4. Albuquerque',\n",
-       " '5. Los Cabos',\n",
-       " '6. Greenville',\n",
-       " '7. Archipelago Sea',\n",
-       " '8. Walla Walla Valley',\n",
-       " '9. Salina Island',\n",
-       " '10. Solta',\n",
-       " '11. Iguazu Falls']"
+       "['1. Buenos Aires',\n",
+       " '2. Toronto',\n",
+       " '3. Pyeongchang',\n",
+       " '4. Marakesh',\n",
+       " '5. Albuquerque',\n",
+       " '6. Los Cabos',\n",
+       " '7. Greenville',\n",
+       " '8. Archipelago Sea',\n",
+       " '9. Walla Walla Valley',\n",
+       " '10. Salina Island',\n",
+       " '11. Solta',\n",
+       " '12. Iguazu Falls']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for rank in range(0,len(cities)):\n",
-    "    names_and_ranks.append((f'{rank}. {city_names[rank]}'))\n",
+    "    names_and_ranks.append((f'{rank+1}. {city_names[rank]}'))\n",
     "names_and_ranks    "
    ]
   },
