automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = []"
+    "city_populations = []\n",
+    "for"
    ]
   },
   {
