--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,7 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for city "
+    "for city in range(0,)"
    ]
   },
   {
