automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for city in range(0,len(cities)):"
+    "for city in range(0,len(cities)):\n",
+    "    city_populations"
    ]
   },
   {
