--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
    "source": [
     "city_populations = []\n",
     "for city in range(0,len(cities)):\n",
-    "    city_populations"
+    "    city_populations.append"
    ]
   },
   {
