--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,7 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for city in range(0,len(cities)):\n",
+    "for num in range(0,len(cities)):\n",
     "    city_populations.append(city)"
    ]
   },
