--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
    "source": [
     "city_populations = []\n",
     "for num in range(0,len(cities)):\n",
-    "    city_populations.append(city)"
+    "    city_populations.append(cities[num][p])"
    ]
   },
   {
