--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,8 @@
    "source": [
     "city_populations = []\n",
     "for num in range(0,len(cities)):\n",
-    "    city_populations.append(cities[num]['Population'])"
+    "    city_populations.append(cities[num]['Population'])\n",
+    "city_populations    "
    ]
   },
   {
