--- a/index.ipynb
+++ b/index.ipynb
@@ -469,7 +469,7 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "city\n",
+    "city[0].values()\n",
     "for num in range(0,len(cities)):\n",
     "    city_populations.append(cities[num]['Population'])\n",
     "city_populations"
