--- a/index.ipynb
+++ b/index.ipynb
@@ -464,49 +464,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2891000,\n",
-       " 2800000,\n",
-       " 2581000,\n",
-       " 928850,\n",
-       " 559277,\n",
-       " 287651,\n",
-       " 84554,\n",
-       " 60000,\n",
-       " 32237,\n",
-       " 4000,\n",
-       " 1700,\n",
-       " 0,\n",
-       " 2891000,\n",
-       " 2800000,\n",
-       " 2581000,\n",
-       " 928850,\n",
-       " 559277,\n",
-       " 287651,\n",
-       " 84554,\n",
-       " 60000,\n",
-       " 32237,\n",
-       " 4000,\n",
-       " 1700,\n",
-       " 0]"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "city_areas = []\n",
     "cities[0].keys\n",
     "for num in range(0,len(cities)):\n",
     "    city_populations.append(cities[num]['Population'])\n",
-    "city_populations"
+    "#city_populations"
    ]
   },
   {
