automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -464,12 +464,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "cities[0].keys\n",
+    "cities[0].keys()\n",
     "for num in range(0,len(cities)):\n",
     "    city_populations.append(cities[num]['Population'])\n",
     "#city_populations"
