automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -464,14 +464,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['City', 'Country', 'Population', 'Area'])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_areas = []\n",
     "cities[0].keys()\n",
-    "for num in range(0,len(cities)):\n",
-    "    city_populations.append(cities[num]['Population'])\n",
+    "#for num in range(0,len(cities)):\n",
+    "#    city_populations.append(cities[num]['Population'])\n",
     "#city_populations"
    ]
   },
