--- a/index.ipynb
+++ b/index.ipynb
@@ -482,7 +482,7 @@
     "city_areas = []\n",
     "cities[0].keys()\n",
     "#for num in range(0,len(cities)):\n",
-    "#    city_populations.append(cities[num]['Population'])\n",
+    "#    city_populations.append(cities[num]['Area'])\n",
     "#city_populations"
    ]
   },
