--- a/index.ipynb
+++ b/index.ipynb
@@ -480,8 +480,7 @@
    ],
    "source": [
     "city_areas = []\n",
-    "cities[0].keys()\n",
-    "#for num in range(0,len(cities)):\n",
+    "for num in range(0,len(cities)):\n",
     "#    city_populations.append(cities[num]['Area'])\n",
     "#city_populations"
    ]
