--- a/index.ipynb
+++ b/index.ipynb
@@ -481,7 +481,7 @@
    "source": [
     "city_areas = []\n",
     "for num in range(0,len(cities)):\n",
-    "#    city_populations.append(cities[num]['Area'])\n",
+    "    city_areas.append(cities[num]['Area'])\n",
     "#city_populations"
    ]
   },
