automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -464,16 +464,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['City', 'Country', 'Population', 'Area'])"
+       "[4758, 2731, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,12 +482,12 @@
     "city_areas = []\n",
     "for num in range(0,len(cities)):\n",
     "    city_areas.append(cities[num]['Area'])\n",
-    "#city_populations"
+    "city_areas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
