--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,7 @@
     "\n",
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
-    "for rank in cit:\n",
+    "for rank in city_indices:\n",
     "    names_and_ranks.append((f'{rank+1}. {city_names[rank]}'))\n",
     "names_and_ranks    "
    ]
