--- a/index.ipynb
+++ b/index.ipynb
@@ -321,7 +321,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for num in range(0,len(cities)):\n",
+    "for ci in range(0,len(cities)):\n",
     "    city_populations.append(cities[num]['Population'])\n",
     "city_populations    "
    ]
