automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,7 @@
    "source": [
     "city_populations = []\n",
     "for city in cities:\n",
-    "    city_populations.append(cities[num]['Population'])\n",
+    "    city_populations.append(cit[num]['Population'])\n",
     "city_populations    "
    ]
   },
