--- a/index.ipynb
+++ b/index.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        " 0]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
    "source": [
     "city_populations = []\n",
     "for city in cities:\n",
-    "    city_populations.append(cit[num]['Population'])\n",
+    "    city_populations.append(city['Population'])\n",
     "city_populations    "
    ]
   },
