--- a/index.ipynb
+++ b/index.ipynb
@@ -480,7 +480,7 @@
    ],
    "source": [
     "city_areas = []\n",
-    "for num in range(0,len(cities)):\n",
+    "for city in range(0,len(cities)):\n",
     "    city_areas.append(cities[num]['Area'])\n",
     "city_areas"
    ]
