automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -480,8 +480,8 @@
    ],
    "source": [
     "city_areas = []\n",
-    "for city in range(0,len(cities)):\n",
-    "    city_areas.append(cities[num]['Area'])\n",
+    "for city in cities:\n",
+    "    city_areas.append(city['Area'])\n",
     "city_areas"
    ]
   },
